@startuml
'https://plantuml.com/class-diagram

skinparam Linetype ortho

title "Diagrama de clases - Promedios"

class Alumno {
    - String nombre
    - String apellido
    - int edad
    - String carrera
    - HashMap<Materia, ArrayList<Double>> materias

    constructor Alumno(nombre: String, apellido: String, edad: int, carrera: String)

    + getters y setters()
}

class Materia {
    - String nombre
    - String codigo

    + getters()
}

class Carrera {
    - String nombre
    - String codigo
    - ArrayList<Materia> materias

    + getters()
}

class CalculadorNotas {
    + double calcularPromedio(Materia materia, ArrayList<Double> notas)
    + double calcularPromedioGeneral(Alumno alumno)
}

' relaciones
Alumno <.. Materia : tiene
Carrera *-- Materia : tiene
Alumno *-- Carrera : tiene
CalculadorNotas <.. Materia : usa
CalculadorNotas <.. Alumno : usa

@enduml